--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,16 @@
 			<version>42.6.0</version>
 		</dependency>
 
+
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>2.2.224</version>
+			<scope>test</scope>
+		</dependency>
+		
+
 	</dependencies>
 
 	<build>
